--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx,.json",
     "lint-and-fix": "eslint . --ext .ts,.tsx,.js,.jsx,.json --fix",
-    "prettier-format": "prettier --config --write \"src/**/*.{js,jsx,tsx,ts}\""
+    "prettier-format": "prettier --config --write \"src/**/*.{js,jsx,tsx,ts}\"",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
@@ -37,6 +38,9 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "intl": "^1.2.5",
+    "jest-expo": "^46.0.1",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-styled-components": "^7.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.0",
@@ -59,11 +63,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.12",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^11.1.0",
+    "@types/jest": "^29.0.3",
     "@types/react": "~17.0.21",
     "@types/react-native": "^0.67.12",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
+    "jest": "^29.0.3",
     "prettier": "^2.7.1",
+    "react-test-renderer": "^17.0.2",
+    "ts": "^0.2.2",
     "typescript": "~4.3.5"
   },
   "private": true
